--- a/Личный кабинет/style.css
+++ b/Личный кабинет/style.css
@@ -4,7 +4,7 @@
     font-family: Montserrat;
     font-weight: normal;
     font-style: normal;
-    color: #263238;
+    color: #263238 !important;
     line-height: normal;
 }
 /* Общие классы */
@@ -164,15 +164,23 @@ p, h1, h2, h3, h4, h5, h6 {
 
 
 
-/* Адаптивная левая панель*/
+/* Адаптивная левая панель / Иконка меню */
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+}
 #mobile-menu {
     position: fixed;
     display: none;
-    bottom: 1rem;
-    right: 1rem;
+    top: 1rem;
+    left: 1rem;
     padding: 0.5rem;
     z-index: 10000;
-    transition: transform 0.5s ease;
 
     @media(max-width: 991px) {;
         display: flex;
@@ -180,9 +188,80 @@ p, h1, h2, h3, h4, h5, h6 {
         justify-content: center;
     }
 }
+#mobile-menu .fa-times {
+    background: #d2cece;
+    border-radius: 100px;
+    width: 44px !important;
+    padding: 0.5rem;
+}
+#mobile-menu i {
+    transition: transform 0.5s ease;
+}
 .rotate {
     transform: rotate(180deg); /* Поворот на 90 градусов */
 }
+#mobile-menu .icon {
+    z-index: 1000;
+    position: relative;
+
+    height: 44px;
+    width: 44px;
+    border-radius: 100px;
+
+    background: white;
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.15);
+    opacity: 0;
+    padding: 0.5rem;
+
+    transition: all 0.3s ease;
+    transform: translateX(-20px);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#mobile-menu .icon.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+#mobile-menu .icon:nth-child(2) {
+    transition-delay: 0.1s;
+}
+#mobile-menu .icon:nth-child(3) {
+    transition-delay: 0.2s;
+}
+#mobile-menu .icon:nth-child(4) {
+    transition-delay: 0.3s;
+}
+#mobile-menu .icon:nth-child(5) {
+    transition-delay: 0.4s;
+}
+#mobile-menu .icon:nth-child(6) {
+    transition-delay: 0.5s;
+}
+#mobile-menu .icon:nth-child(7) {
+    transition-delay: 0.6s;
+}
+#mobile-menu .icon:nth-child(8) {
+    transition-delay: 0.7s;
+}
+#mobile-menu .icon:nth-child(9) {
+    transition-delay: 0.8s;
+}
+#mobile-menu .icon:nth-child(10) {
+    transition-delay: 0.9s;
+}
+#mobile-menu .icon:nth-child(11) {
+    transition-delay: 1s;
+}
+#mobile-menu .icon:nth-child(12) {
+    transition-delay: 1.1s;
+}
+#mobile-menu .icon:nth-child(13) {
+    transition-delay: 1.2s;
+}
+
+
 
 .step-item.page-item {
     @media(max-width: 576px) {
@@ -199,19 +278,6 @@ p, h1, h2, h3, h4, h5, h6 {
 
     @media(max-width: 991px) {
         display: none !important;
-        border-radius: 0;
-        overflow-y: auto;
-        height: 100%;
-        position: absolute;
-    }
-}
-.left-panel.show {
-    @media(max-width: 991px) {
-        display: flex !important;
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
     }
 }
 .left-panel-item {
