--- a/PROF_SPO/Право просвещения/css/style.css
+++ b/PROF_SPO/Право просвещения/css/style.css
@@ -1,10 +1,29 @@
 * {
-
+    font-family: 'Liberation Sans', sans-serif;
+}
+@font-face {
+    font-family: 'Liberation Sans';
+    src: url('../fonts/LiberationSansRegular/LiberationSansRegular.eot') format('eot'),
+    url('../fonts/LiberationSansRegular/LiberationSansRegular.woff') format('woff'),
+    url('../fonts/LiberationSansRegular/LiberationSansRegular.ttf') format('truetype');
+    font-weight: 400; /* Нормальный вес */
+    font-style: normal;
 }
 
+@font-face {
+    font-family: 'Liberation Sans';
+    src: url('../fonts/LiberationSansBold/LiberationSansBold.eot') format('eot'),
+    url('../fonts/LiberationSansBold/LiberationSansBold.woff') format('woff'),
+    url('../fonts/LiberationSansBold/LiberationSansBold.ttf') format('truetype');
+    font-weight: 700; /* Жирный вес */
+    font-style: normal;
+}
 /* Тексты */
 .text-color-shark {
     color: #212529;
+}
+.text-color-shark-75 {
+    color: #212529BF;
 }
 .text-color-black {
     color: #000000;
@@ -21,39 +40,112 @@
 
 .fs-64 {
     font-size: 64px;
+
+    @media(max-width: 1200px) {
+        font-size: 58px;
+    }
+    @media(max-width: 768px) {
+        font-size: 54px;
+    }
 }
 .fs-60 {
     font-size: 60px;
+    @media(max-width: 1200px) {
+        font-size: 54px;
+    }
+    @media(max-width: 768px) {
+        font-size: 38px;
+    }
+    @media(max-width: 576px) {
+        font-size: 32px;
+    }
 }
 .fs-52 {
     font-size: 52px;
+    @media(max-width: 1200px) {
+        font-size: 46px;
+    }
+    @media(max-width: 576px) {
+        font-size: 26px;
+    }
 }
 .fs-48 {
     font-size: 48px;
+    @media(max-width: 1200px) {
+        font-size: 42px;
+    }
+    @media(max-width: 576px) {
+        font-size: 32px;
+    }
 }
 .fs-44 {
     font-size: 44px;
+    @media(max-width: 1200px) {
+        font-size: 40px;
+    }
+    @media(max-width: 576px) {
+        font-size: 28px;
+    }
 }
 .fs-36 {
     font-size: 36px;
+    @media(max-width: 1200px) {
+        font-size: 32px;
+    }
+    @media(max-width: 576px) {
+        font-size: 30px;
+    }
+    @media(max-width: 376px) {
+        font-size: 22px;
+    }
 }
 .fs-32 {
     font-size: 32px;
+    @media(max-width: 1200px) {
+        font-size: 28px;
+    }
+    @media(max-width: 576px) {
+        font-size: 26px;
+    }
+    @media(max-width: 376px) {
+        font-size: 20px;
+    }
 }
 .fs-30 {
     font-size: 30px;
+    @media(max-width: 1200px) {
+        font-size: 26px;
+    }
+    @media(max-width: 576px) {
+        font-size: 18px;
+    }
 }
 .fs-24 {
     font-size: 24px;
+    @media(max-width: 1200px) {
+        font-size: 20px;
+    }
 }
 .fs-22 {
     font-size: 22px;
+    @media(max-width: 1200px) {
+        font-size: 20px;
+    }
 }
 .fs-20 {
     font-size: 20px;
+    @media(max-width: 1200px) {
+        font-size: 18px;
+    }
 }
 .fs-18 {
     font-size: 18px;
+    @media(max-width: 1200px) {
+        font-size: 16px;
+    }
+    @media(max-width: 376px) {
+        font-size: 13px;
+    }
 }
 .fs-16 {
     font-size: 16px;
@@ -63,6 +155,10 @@
 }
 .fs-14 {
     font-size: 14px;
+
+    @media(max-width: 376px) {
+        font-size: 10px;
+    }
 }
 
 
@@ -71,6 +167,9 @@
 }
 .lh-54 {
     line-height: 54px;
+}
+.lh-50 {
+    line-height: 50px;
 }
 .lh-45 {
     line-height: 45px;
@@ -83,6 +182,9 @@
 }
 .lh-30 {
     line-height: 30px;
+}
+.lh-23 {
+    line-height: 23px
 }
 .lh-22 {
     line-height: 22px;
@@ -124,8 +226,18 @@ p, h1, h2, h3, h4, h5, h6 {
     padding-left: 36px;
     padding-right: 36px;
 }
+.pt-36 {
+    padding-top: 36px;
+}
 .pt-32 {
     padding-top: 32px;
+}
+.pt-20 {
+    padding-top: 20px;
+}
+.px-10 {
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 /* Карточки */
@@ -135,44 +247,120 @@ p, h1, h2, h3, h4, h5, h6 {
 #card-1 {
     top: 42px;
     left: 95px;
+
+    @media(max-width: 1200px) {
+        width: 100%;
+        margin-bottom: 20px;
+    }
 }
 #card-2 {
     left: 472px;
+
+    @media(max-width: 1200px) {
+        width: 100%;
+        margin-bottom: 20px;
+    }
 }
 #card-3 {
     top: 42px;
     right: 33px;
+
+    @media(max-width: 1200px) {
+        width: 100%;
+        margin-bottom: 20px;
+    }
 }
 #card-4 {
     right: 0;
     top: 184px;
+
+    @media(max-width: 1200px) {
+        width: 100%;
+        margin-bottom: 20px;
+    }
 }
 #card-5 {
     bottom: 8px;
     right: 80px;
+
+    @media(max-width: 1200px) {
+        width: 100%;
+        margin-bottom: 20px;
+    }
 }
 #card-6 {
     bottom: 0;
     left: 472px;
+
+    @media(max-width: 1200px) {
+        width: 100%;
+        margin-bottom: 20px;
+    }
 }
 #card-7 {
     bottom: 16px;
     left: 76px;
+
+    @media(max-width: 1200px) {
+        width: 100%;
+        margin-bottom: 20px;
+    }
 }
 #card-8 {
     left: 0;
     top: 184px;
+
+    @media(max-width: 1200px) {
+        width: 100%;
+        margin-bottom: 20px;
+    }
 }
 
 /* Общие */
-.position-absolute-centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.custom-display-xxl-none {
+    @media(max-width: 1400px) {
+        display: none
+    }
+}
+.custom-w-xxl-100 {
+    @media(max-width: 1400px) {
+        width: 100% !important;
+    }
+}
+#college-block {
+    @media(min-width: 1200px) {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    @media(max-width: 1200px) {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+}
+.border-radius-16 {
+    border-radius: 16px;
+}
+.border-radius-60 {
+    border-radius: 60px;
+}
+.br-left-top {
+    border-radius: 30px 0 0 0;
+}
+.br-right-bottom {
+    border-radius: 0 0 30px 0;
+}
+.position-xl-absolute {
+    @media(min-width: 1200px) {
+        position: absolute;
+    }
 }
 .opacity-85 {
     opacity: 85%;
+}
+.opacity-65 {
+    opacity: 65%;
 }
 .pink-point {
     width: 16px !important;
@@ -204,8 +392,11 @@ p, h1, h2, h3, h4, h5, h6 {
 .bg-gulf-stream {
     background: #73ADB0;
 }
+.bg-hit-gray {
+    background: #ADB5BD;
+}
 .b-shadow-1 {
-    box-shadow: 2px 4px 20px 0px #01565D1A;
+    box-shadow: 2px 4px 20px 0 #01565D1A;
 }
 .overlay {
     position: absolute;
@@ -217,8 +408,133 @@ p, h1, h2, h3, h4, h5, h6 {
     mix-blend-mode: lighten;
     opacity: 1;
 }
+.overlay-2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #035D66;
+    mix-blend-mode: color;
+    opacity: 1;
+}
 
 /* Бордеры */
 .border-white-green {
     border: 1px solid #73ADB026
+}
+.border-white-green-opacity-10 {
+    border: 1px solid #73ADB040
+}
+.border-wild-watermelon {
+    border: 1px solid #FF4E84;
+}
+
+/* Таблицы */
+#support-packages-table {
+    border-collapse: collapse;
+}
+#support-packages-table td {
+    width: 33.33%;
+}
+#support-packages-table tbody {
+    border: 1px solid #ADB5BD;
+}
+#support-packages-table .border-right {
+    border-right: 1px solid #ADB5BD;
+}
+#support-packages-table .border-top {
+    border-top: 1px solid #ADB5BD;
+}
+#support-packages-table .strikethrough {
+    position: relative;
+    display: inline-block;
+}
+
+#support-packages-table .strikethrough::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 14px;
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transform: translateY(10%);
+}
+
+/* Инпуты */
+.form-control {
+    border: 1px solid #21252926;
+    border-radius: 8px !important;
+    padding: 10px 12px !important;
+}
+.form-control::placeholder {
+    opacity: 50% !important;
+}
+
+/* Чекбоксы */
+input[type="checkbox"] {
+    appearance: none !important;
+}
+input[type="checkbox"] {
+    width: 3rem;
+    height: 1.5rem;
+    background-image: url('../images/unchecked.svg');
+    background-size: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    cursor: pointer;
+    margin-right: 0.5rem;
+}
+input[type="checkbox"]:checked {
+    border: none;
+    background-image: url('../images/checked.svg');
+    background-size: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+/* Формы */
+#application {
+    position: relative;
+    background-color: rgba(255, 255, 255, 0.65);
+    backdrop-filter: blur(10px); /* Размытие фона */
+}
+
+/* Контейнеры */
+#first-container {
+    padding-top: 172px;
+    padding-bottom: 169px;
+
+    @media(max-width: 1300px) {
+        padding-top: 132px;
+        padding-bottom: 40px;
+    }
+}
+#college-section {
+    @media(min-width: 1200px) {
+        height: 443px;
+    }
+    height: auto;
+}
+#service-work-row-2 {
+    @media(min-width: 1400px) {
+        position: absolute;
+        top: 238px
+    }
+    top: 0;
+    position: static;
+}
+#services-section {
+    padding-bottom: 321px;
+
+    @media(max-width: 1400px) {
+        padding-bottom: 100px;
+    }
+}
+
+table {
+    width: 100%;
+    table-layout: fixed;
 }
